[package]
name = "gba"
description = "A minimal cell wrapper for communication between regular and IRQ code on the GBA using single-word values."
repository = "https://github.com/ischeinkman/gba-cell"
version = "0.0.1"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

[features]
default = ["on_gba"]
# Activates the `track_caller` attribute on various functions. Use of the
# `track_caller` attribute on a function adds a "secret" extra argument for the
# `Location` of the caller, which can reduce performance if the function is not
# inlined (meaning  `Location` is passed via the stack). This is only needed for
# debugging, and so it's off by default.
track_caller = []

[package.metadata.docs.rs]
# When building the crate docs, we want to see the crate "as if" it was running
# on the GBA. This is the closest target that docs.rs supports by default and
# which *also* supports the `instruction_set` attribute to avoid build errors.
targets = ["armv5te-unknown-linux-gnueabi"]
features = ["doc_cfg"]
